// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Banner 1`] = `
<img
  alt="banner"
  className="img-responsive"
  src="https://pbs.twimg.com/profile_banners/31472986/1390867474/600x200"
/>
`;

exports[`renders Banner 2`] = `
<img
  alt=""
  className="img-responsive"
  src=""
/>
`;

exports[`renders Header 1`] = `
<div
  className="header-info"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-2 col-md-2 col-lg-1"
      >
        Tweets 
        <br />
         
        5
      </div>
      <div
        className="col-xs-6 col-sm-2 col-md-2 col-lg-1"
      >
        Seguindo 
        <br />
         
        10
      </div>
      <div
        className="col-xs-6 col-sm-2 col-md-2 col-lg-1"
      >
        Seguidores 
        <br />
         
        15
      </div>
      <div
        className="col-xs-6 col-sm-2 col-md-2 col-lg-1"
      >
        Curtidas 
        <br />
         
        20
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Header 2`] = `
<div
  className="header-info"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-2 col-md-2 col-lg-1"
      >
        Tweets 
        <br />
         
        0
      </div>
      <div
        className="col-xs-6 col-sm-2 col-md-2 col-lg-1"
      >
        Seguindo 
        <br />
         
        0
      </div>
      <div
        className="col-xs-6 col-sm-2 col-md-2 col-lg-1"
      >
        Seguidores 
        <br />
         
        0
      </div>
      <div
        className="col-xs-6 col-sm-2 col-md-2 col-lg-1"
      >
        Curtidas 
        <br />
         
        0
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Tweet 1`] = `
<div
  className="tweet-block row"
>
  <div
    className="col-xs-offset-1 col-xs-11"
  >
    Em resposta a 
    Lorena Lima
  </div>
  <div
    className="col-xs-1 tweet-img"
  >
    <img
      alt=""
      className="img-responsive"
      src="https://pbs.twimg.com/profile_images/777959576482287617/taEJPem9_normal.jpg"
    />
  </div>
  <div
    className="col-xs-11"
  >
    <span>
      <span
        className="title verified"
      >
        americanas.com
      </span>
      <span
        className="accountid"
      >
        @
        americanascom
      </span>
    </span>
    - 
    Invalid date
    <br />
    <a
      href="http://twitter.com/T_Lorena"
      style={Object {}}
    >
      @Lorena Lima
    </a>
    , a gente pode te ajudar por aqui. Fala com a gente por DM e conta o que aconteceu!
  </div>
</div>
`;

exports[`renders Tweet 2`] = `
<div
  className="tweet-block row"
>
  <div
    className="col-xs-1 tweet-img"
  >
    <img
      alt=""
      className="img-responsive"
      src={undefined}
    />
  </div>
  <div
    className="col-xs-11"
  >
    <span>
      <span
        className="title"
      >
        
      </span>
      <span
        className="accountid"
      >
        @
        
      </span>
    </span>
    - 
    Invalid date
    <br />
  </div>
</div>
`;

exports[`renders TwitterUser 1`] = `
<span>
  <span
    className="title verified"
  >
    rafael
  </span>
  <span
    className="accountid"
  >
    @
    rafacesar
  </span>
</span>
`;

exports[`renders TwitterUser 2`] = `
<span>
  <span
    className="title"
  >
    
  </span>
  <span
    className="accountid"
  >
    @
    
  </span>
</span>
`;

exports[`renders TwitterUser 3`] = `
<span>
  <span
    className="title"
  >
    rafael
  </span>
  <span
    className="accountid"
  >
    @
    rafacesar
  </span>
</span>
`;

exports[`renders User 1`] = `
<div
  className="user-info"
>
  <img
    alt="rafael"
    className="center-block"
    src="https://pbs.twimg.com/profile_banners/31472986/1390867474/600x200"
  />
  <h1>
    <span>
      <span
        className="title verified"
      >
        rafael
      </span>
      <span
        className="accountid"
      >
        @
        rafacesar
      </span>
    </span>
  </h1>
  <p>
    A maior loja na palma da sua mão: 
    <a
      href="https://goo.gl/Ntg9wN"
      style={Object {}}
    >
      goo.gl/Ntg9wN
    </a>
  </p>
  <p
    className="location"
  >
    Brasil
  </p>
  <p
    className="url"
  >
    https://twitter.com
  </p>
  <p
    className="since"
  >
    Participa desde 
    Invalid date
  </p>
</div>
`;

exports[`renders User 2`] = `
<div
  className="user-info"
>
  <img
    alt=""
    className="center-block"
    src=""
  />
  <h1>
    <span>
      <span
        className="title"
      >
        
      </span>
      <span
        className="accountid"
      >
        @
        
      </span>
    </span>
  </h1>
  <p>
    
  </p>
  <p
    className="location"
  >
    
  </p>
  <p
    className="url"
  >
    
  </p>
  <p
    className="since"
  >
    Participa desde 
    Invalid date
  </p>
</div>
`;
